--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/JasonKraft/drivespoke/issues"
   },
-  "homepage": "https://github.com/JasonKraft/drivespoke#readme"
+  "homepage": "https://github.com/JasonKraft/drivespoke#readme",
+  "dependencies": {
+    "mongodb": "^2.2.11"
+  }
 }
