--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/JasonKraft/drivespoke#readme",
   "dependencies": {
-    "mongodb": "^2.2.11"
+    "express": "^4.14.0",
+    "mongodb": "^2.2.11",
+    "passport": "^0.3.2",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "socket.io": "^1.5.1"
   }
 }
