--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
   "name": "drivespoke",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JasonKraft/drivespoke.git"
-  },
-  "author": "",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/JasonKraft/drivespoke/issues"
-  },
-  "homepage": "https://github.com/JasonKraft/drivespoke#readme",
   "dependencies": {
-    "mongodb": "^2.2.11"
+    "body-parser": "~1.15.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.14.0",
+    "hbs": "~4.0.1",
+    "mongodb": "^2.2.11",
+    "morgan": "~1.7.0",
+    "node-sass-middleware": "0.9.8",
+    "serve-favicon": "~2.3.0"
   }
 }
