--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "express": "~4.14.0",
     "hbs": "~4.0.1",
     "mongodb": "^2.2.11",
+    "mongoose": "^4.6.7",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.9.8",
-    "serve-favicon": "~2.3.0",
     "passport": "^0.3.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "serve-favicon": "~2.3.0",
     "socket.io": "^1.5.1"
   }
 }
