--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-session": "^1.14.2",
     "hbs": "~4.0.1",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.7",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.9.8",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "request": "^2.78.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.5.1"
   }
