--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass-middleware": "0.9.8",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "request": "^2.78.0",
