--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.5.1"
+    "socket.io": "^1.5.1",
+    "twilio": "^2.11.0"
   }
 }
